--- a/index.html
+++ b/index.html
@@ -7,68 +7,85 @@
   <title>BUD-PIOTR - Usługi Budowlane</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
-    body { background: #f5f5f5; color: #222; }
-    header { background: #0d1b2a; color: white; padding: 20px 40px; text-align: center; }
-    header h1 { font-size: 2.5em; }
-    nav { background: #1b263b; display: flex; justify-content: center; padding: 10px; }
-    nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
-    .hero { background: #1b263b; padding: 80px 20px; text-align: center; color: white; }
-    .hero h2 { font-size: 2em; margin-bottom: 10px; }
-    .hero p { font-size: 1.2em; }
-    .section { padding: 40px 20px; max-width: 1200px; margin: auto; }
+    body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; background: #f5f5f5; }
+    header { background: #0d1b2a; color: white; padding: 20px; text-align: center; }
+    nav { background: #1b263b; padding: 10px; text-align: center; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    section { padding: 40px 20px; max-width: 1200px; margin: auto; }
+    .hero { text-align: center; padding: 60px 20px; background: #1b263b; color: white; }
+    .services, .gallery, .contact { margin-top: 40px; }
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-    .service { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .contact { background: #e0e1dd; padding: 40px 20px; text-align: center; }
-    footer { background: #1b263b; color: white; text-align: center; padding: 20px; }
+    .service, .gallery img { background: white; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); padding: 20px; }
+    .gallery img { width: 100%; height: auto; object-fit: cover; cursor: pointer; transition: transform 0.2s; }
+    .gallery img:hover { transform: scale(1.05); }
+    form { display: grid; grid-gap: 10px; }
+    input, textarea { padding: 10px; font-size: 16px; width: 100%; border-radius: 5px; border: 1px solid #ccc; }
+    button { padding: 10px; background: #0d1b2a; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer; }
+    footer { background: #1b263b; color: white; text-align: center; padding: 20px; margin-top: 40px; }
+    .motto { text-align: center; font-style: italic; margin: 20px 0; color: #555; font-size: 1.2em; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>BUD-PIOTR</h1>
-    <p>Nowoczesne domy z duszą drewna</p>
-  </header>
 
-  <nav>
-    <a href="#uslugi">Usługi</a>
-    <a href="#galeria">Galeria</a>
-    <a href="#kontakt">Kontakt</a>
-  </nav>
+<header>
+  <h1>BUD-PIOTR</h1>
+  <p>Twój partner w budowie nowoczesnych przestrzeni</p>
+</header>
 
-  <section class="hero">
-    <h2>Zaufaj doświadczeniu</h2>
-    <p>Profesjonalne usługi budowlane na terenie Podbeskidzia</p>
-  </section>
+<nav>
+  <a href="#services">Usługi</a>
+  <a href="#gallery">Galeria</a>
+  <a href="#contact">Kontakt</a>
+</nav>
 
-  <section id="uslugi" class="section">
-    <h2>Nasze usługi</h2>
-    <div class="grid">
-      <div class="service">Fundamenty</div>
-      <div class="service">Płyty fundamentowe</div>
-      <div class="service">Murowanie</div>
-      <div class="service">Dachy</div>
-      <div class="service">Tarasy</div>
-      <div class="service">Elewacje z drewna</div>
-      <div class="service">Konstrukcje szkieletowe</div>
-      <div class="service">Wykończenia i montaż</div>
-    </div>
-  </section>
+<section class="hero">
+  <h2>Specjalizujemy się w budowie tarasów, elewacji i domów drewnianych</h2>
+  <p>Działamy na terenie Śląska i Małopolski</p>
+</section>
 
-  <section id="galeria" class="section">
-    <h2>Galeria realizacji</h2>
-    <p>Zdjęcia przykładowych projektów już wkrótce.</p>
-  </section>
+<section id="services" class="services">
+  <h2>Nasze usługi</h2>
+  <div class="grid">
+    <div class="service">Tarasy drewniane</div>
+    <div class="service">Elewacje drewniane i tynkowane</div>
+    <div class="service">Domy szkieletowe i CLT</div>
+    <div class="service">Wiaty, pergole, altany</div>
+    <div class="service">Fundamenty i płyty fundamentowe</div>
+    <div class="service">Murowanie</div>
+    <div class="service">Dachy</div>
+  </div>
+</section>
 
-  <section id="kontakt" class="contact">
-    <h2>Kontakt</h2>
-    <p>Piotr Pierog</p>
-    <p>538 944 516 | piotrekpierog86@gmail.com</p>
-    <p>NIP: 5532359951 | REGON: 541126676</p>
-    <p>34-335 Korbielów, ul. Pod Beską 68</p>
-  </section>
+<section id="gallery" class="gallery">
+  <h2>Galeria realizacji</h2>
+  <p class="motto">"Nowoczesne domy z duszą drewna"</p>
+  <div class="grid">
+    <img src="gallery1.jpg" alt="Realizacja">
+    <img src="gallery2.jpg" alt="Realizacja">
+    <img src="gallery3.jpg" alt="Realizacja">
+    <img src="gallery4.jpg" alt="Realizacja">
+    <img src="gallery5.jpg" alt="Realizacja">
+    <img src="gallery6.jpg" alt="Realizacja">
+  </div>
+</section>
 
-  <footer>
-    &copy; 2025 BUD-PIOTR. Wszelkie prawa zastrzeżone.
-  </footer>
+<section id="contact" class="contact">
+  <h2>Kontakt</h2>
+  <form>
+    <input type="text" placeholder="Imię i nazwisko" required>
+    <input type="email" placeholder="Adres e-mail" required>
+    <input type="tel" placeholder="Numer telefonu">
+    <textarea rows="5" placeholder="Wiadomość" required></textarea>
+    <button type="submit">Wyślij</button>
+  </form>
+  <p>📍 34-335 Korbielów, ul. Pod Weską 68</p>
+  <p>📞 538 944 516</p>
+  <p>📩 piotrekpierog86@gmail.com</p>
+</section>
+
+<footer>
+  &copy; 2025 BUD-PIOTR. Wszystkie prawa zastrzeżone.
+</footer>
+
 </body>
 </html>
